syntax = "proto3";
package rpc;

import "google/protobuf/any.proto";
import "ledger.proto";

option go_package = "gitdc.ee.guardtime.com/alphabill/alphabill/internal/rpc/transaction;transaction";

// TransactionOrder is a generic transaction order, same for all transaction systems.
message TransactionOrder {
  bytes transaction_id = 1;
  google.protobuf.Any transaction_attributes = 2;
  uint64 timeout = 3;
  bytes owner_proof = 4;
}

// Alphabill specific transaction attributes.
message BillTransfer {
  bytes new_bearer = 1;
  bytes backlink = 2;
}

// TODO not aligned with spec at the moment. Idea is to differentiate it from normal bill transfer.
message DustTransfer {
  bytes new_bearer = 1;
  bytes backlink = 2;
  bytes nonce = 3;
  bytes target_bearer = 4;
  uint32 target_value = 5; // TODO type might be to small. Change when AB sums are decided.
}

message BillSplit {
  uint32 amount = 1; // TODO type might be to small. Change when AB sums are decided.
  bytes target_bearer = 2;
  uint32 target_value = 3; // TODO type might be to small. Change when AB sums are decided.
  bytes backlink = 4;
}

message Swap {
  bytes owner_condition = 1;
  repeated bytes bill_identifiers = 2;
  repeated DustTransfer dust_transfer_orders = 3;
  repeated LedgerProof proofs = 4;
  uint32 target_value = 5; // TODO type might be to small. Change when AB sums are decided.
}


